lib/bait/tests/inout_error/prefix/not_no_bool.out
lib/bait/tests/inout_error/prefix/not_no_bool.in.bt:2:8 error: cannot use `not` on i32
